--- a/maestro/e2e/searchCity.yaml
+++ b/maestro/e2e/searchCity.yaml
@@ -1,5 +1,6 @@
-# Search test
+# searchCity test
 appId: host.exp.Exponent
+name: Paris weather test
 ---
 - openLink: exp://192.168.1.66:8081
 - runFlow:
